--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,12 @@ jobs:
         flutter-version: '3.0.5'
      - run: flutter pub get
      - run: flutter build apk
-     - run: flutter build appbundle
+     - uses: "marvinpinto/action-automatic-releases@latest"
+       with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            LICENSE.txt
+            *.apk
