--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,35 @@ jobs:
         flutter-version: '3.0.5'
      - run: flutter pub get
      - run: flutter build apk
-     - uses: "marvinpinto/action-automatic-releases@latest"
+     - name: Upload APK
+       uses: actions/upload-artifact@v1
        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            LICENSE.txt
-            *.apk
+         name: apk
+         path: build/app/outputs/flutter-apk/app.apk
+ release:
+   name: Release APK
+   needs: build
+   runs-on: ubuntu-latest
+   steps:
+     - name: Download APK from build
+       uses: actions/download-artifact@v1
+       with:
+         name: apk
+     - name: Create Release
+       id: create_release
+       uses: actions/create-release@v1
+       env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       with:
+         tag_name: ${{ github.run_number }}
+         release_name: ${{ github.event.repository.name }} v${{ github.run_number }}
+     - name: Upload Release APK
+       id: upload_release_asset
+       uses: actions/upload-release-asset@v1.0.1
+       env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       with:
+         upload_url: ${{ steps.create_release.outputs.upload_url }}
+         asset_path: apk/app.apk
+         asset_name: ${{ github.event.repository.name }}.apk
+         asset_content_type: application/zip
