--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.1
  build:
    runs-on: windows-latest
+   needs: cancelpreviousworkflow
    steps:
      - uses: actions/checkout@v3
      - uses: actions/setup-java@v2
