--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   audioplayers: ^1.0.1
+  permission_handler: ^10.0.2
 
 
 dev_dependencies:
