started switching from audioplayers to just_audio

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   audio_service: ^0.18.9
-  audioplayers: ^1.1.1
   flutter:
     sdk: flutter
 
 
+  just_audio: ^0.9.31
   permission_handler: ^10.0.2
 
 
