--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -16,12 +16,16 @@ jobs:
         flutter-version: '3.0.5'
      - run: flutter pub get
      - run: flutter build windows
-     - run: dir /b /a
-     - name: Upload EXE
-       uses: actions/upload-artifact@v1
+     - name: Upload Programm to release
+       uses: svenstaro/upload-release-action@v2
        with:
-         name: exe
-         path: ${{ github.workspace }}\build\windows\runner\Release\musicplayer.exe
+         repo_token: ${{ secrets.GITHUB_TOKEN }}
+         file: ${{ github.workspace }}\build\windows\runner\Release\*
+         tag: ${{ github.run_number }}
+         release_name: ${{ github.event.repository.name }} v${{ github.run_number }}
+         asset_name: ${{ github.event.repository.name }} v${{ github.run_number }}
+         overwrite: true
+         file_glob: true
  release:
    name: Release EXE
    needs: build
