--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -40,7 +40,7 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
          tag_name: ${{ github.run_number }}
-         release_name: ${{ github.event.repository.name }} v${{ github.run_number }} ${{ steps.branchname.outputs.branch }}
+         release_name: ${{ github.event.repository.name }} Android Release v${{ github.run_number }} ${{ steps.branchname.outputs.branch }}
      - name: Upload Release APK
        id: upload_release_asset
        uses: actions/upload-release-asset@v1.0.1
