--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.yolo" "\0"
-            VALUE "FileDescription", "tagmusicplayer" "\0"
+            VALUE "FileDescription", "musicplayer" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "tagmusicplayer" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.yolo. All rights reserved." "\0"
-            VALUE "OriginalFilename", "tagmusicplayer.exe" "\0"
-            VALUE "ProductName", "tagmusicplayer" "\0"
+            VALUE "InternalName", "musicplayer" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.yolo. All rights reserved." "\0"
+            VALUE "OriginalFilename", "musicplayer.exe" "\0"
+            VALUE "ProductName", "musicplayer" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
