--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -26,36 +26,8 @@ jobs:
        uses: svenstaro/upload-release-action@v2
        with:
          repo_token: ${{ secrets.GITHUB_TOKEN }}
-         file: ${{ github.workspace }}\build\windows\runner\Release\*
+         file: ${{ github.workspace }}/build/windows/runner/Release/*.*
          tag: ${{ github.run_number }}
          release_name: ${{ github.event.repository.name }} Windows Release v${{ github.run_number }} ${{ steps.branchname.outputs.branch }}
-         asset_name: ${{ github.event.repository.name }} v${{ github.run_number }}
          overwrite: true
          file_glob: true
- release:
-   name: Release EXE
-   needs: build
-   runs-on: ubuntu-latest
-   steps:
-     - name: Download exe from build
-       uses: actions/download-artifact@v1
-       with:
-         name: exe
-     - name: Create Release
-       id: create_release
-       uses: actions/create-release@v1
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-         tag_name: ${{ github.run_number }}
-         release_name: ${{ github.event.repository.name }} v${{ github.run_number }}
-     - name: Upload Release exe
-       id: upload_release_asset
-       uses: actions/upload-release-asset@v1.0.1
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-         upload_url: ${{ steps.create_release.outputs.upload_url }}
-         asset_path: app/app.exe
-         asset_name: ${{ github.event.repository.name }}.exe
-         asset_content_type: application/zip
